修改识别语言

--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -209,6 +209,7 @@
         document.getElementById("usertishitel").innerHTML=this.responseText;
      }
    }
-   }</script>
+   }
+    </script>
 
 </body></html>
