--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -90,11 +90,12 @@
                                 <i class="menu-expand"></i>
                             </a>
                         </li>
-                    </ul>                              
-        </li> 
+                    </ul>
 
-   
-    
+
+
+
+
             <li>
                 <a href="" class="menu-dropdown">
                     <i class="menu-icon fa fa-user"></i>
@@ -128,7 +129,33 @@
                     </li>
                 </ul>
             </li>
-            
-        </ul>
+        <li>
+            <a href="#" class="menu-dropdown">
+                <i class="menu-icon fa fa-user"></i>
+                <span class="menu-text">图书管理</span>
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="<{:url('Book/lst')}>" >
+                        <span class="menu-text"> 图书列表</span>
+                        <i class="menu-expand"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul class="submenu">
+                <li>
+                    <a href="<{:url('Book/add')}>" >
+                        <span class="menu-text"> 图书添加</span>
+                        <i class="menu-expand"></i>
+                    </a>
+                </li>
+            </ul>
+        </li>
+
+
+
+
+    </ul>
     <!-- /Sidebar Menu -->
 </div>
